commit 0e31a62986f843e0e475554dcbb1da391f22a523
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Mon Jan 30 02:09:54 2012 +0600

    add generate/flush password

commit 396148ded35ceaeb4fb98a3e3c332f3870698398
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Wed Jan 25 23:37:47 2012 +0600

    fix user config

commit aa2452d201bddc1745ae1f8ba80209c578a59449
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Wed Jan 25 23:11:06 2012 +0600

    add config for select TreeView

commit 2535009534b55bd9c327ecbbbbd1208ba3aa9a8c
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Wed Jan 25 19:38:48 2012 +0600

    add comment`s tree view

commit b3f31243fe727a3fca80cd321ae1181151666561
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Mon Jan 23 19:52:03 2012 +0600

    News looks good. Thread user splitted for author and owner

commit fecc7a6ad20fd2de9cdb76ceb99f2ef7b039c9d4
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Mon Jan 23 14:58:03 2012 +0600

    What`s work: NewsFromTopic, EditNews, ShowNews (without comments)

commit 0d50752fe16d540372ef25d52253d8ccacf85a48
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sun Jan 22 22:31:29 2012 +0600

    new code for News and News Admin

commit c0c53ec543c5db4ea756814e805d0b784908e4ca
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sun Jan 22 01:10:36 2012 +0600

    start News system

commit ab540b23ceb953b500aa4b64ba78499bf30dd42d
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sat Jan 21 17:51:35 2012 +0600

    v0.0.5

commit fa58a37fc5a14f3c025a68dd2deb42f8c33d407c
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sat Jan 21 17:27:55 2012 +0600

    add custom decorator and forms` translation

commit 85e91783cb83ff4f315f4858afc7f739a745b57d
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 02:01:19 2012 +0600

    fix back

commit 65850595184a58362b94b340ffc9a912306f1c4e