@@ -397,3 +397,8 @@
     {
         /*background:#E8E9EB;*/
     }
+    
+    article.hot nav
+    {
+        background:#f4f0f0;
+    }
